--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -4,7 +4,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-62815816-1', 'auto');
+  ga('create', 'UA-62815816-1', {'userId' : Math.floor((Math.random() * 1000000) + 1) });
   ga('send', 'pageview');
 
 </script>
