--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -6,7 +6,7 @@
 
   var externalId = Math.floor((Math.random() * 1000000) + 1);
 
-  ga('create', 'UA-62815816-1', {'userId' : externalId });
+  ga('create', 'UA-62815816-1', 'auto');
   ga('set', 'dimension1', externalId);
   ga('send', 'pageview');
 
